grammar/grammar.bnf
<NetXLang> ::= "NetArambho" <StatementList> "NetShesh"

<StatementList> ::= <Statement> | <Statement> <StatementList>

<Statement> ::= <DeviceDecl>
              | <LinkDecl>
              | <IPAssign>
              | <PortAssign>
              | <SendPacket>
              | <RecvPacket>
              | <Broadcast>
              | <RouteDef>
              | <Ping>
              | <Delay>
              | <PacketDrop>
              | <RateLimit>
              | <ApplyRule>
              | <Firewall>
              | <Monitor>
              | <LogEvent>
              | <Print>
              | <IfStatement>
              | <LoopStatement>
              | <FuncDef>
              | <FuncCall>
              | <Assignment>

<DeviceDecl> ::= "JontraGothon" <Identifier> <Identifier> ";"  // Type Name
<LinkDecl> ::= "JogajogSet" <Identifier> <Identifier> ";"
<IPAssign> ::= "ThikanaDao" <Identifier> <IPLiteral> ";"
<PortAssign> ::= "DorjaDao" <Identifier> <Number> ";"
<SendPacket> ::= "PacketPathao" <Identifier> <Identifier> <Expression> ";"
<RecvPacket> ::= "PacketNey" <Identifier> ";"
<Broadcast> ::= "ShobaiPathao" <Identifier> <Expression> ";"
<RouteDef> ::= "PothNirdharon" <Identifier> <Identifier> <Identifier> ";" // Src Dest NextHop
<Ping> ::= "JachaiPing" <Identifier> <Identifier> ";"
<Delay> ::= "Bilombho" <Number> ";"
<PacketDrop> ::= "HariyeFelo" <Identifier> <Number> ";" // Node Percent
<RateLimit> ::= "GotiNiyontron" <Identifier> <Number> ";"
<ApplyRule> ::= "NiyomBoshao" <Identifier> <StringLiteral> ";"
<Firewall> ::= "ProtirodhDao" <Identifier> <StringLiteral> ";" // IP or Port to block
<Monitor> ::= "NirikhaKoro" <Identifier> ";"
<LogEvent> ::= "GhotonaLekho" <StringLiteral> ";"
<Print> ::= "Dekhao" <Expression> ";"

<IfStatement> ::= "Jodi" "(" <Expression> ")" "{" <StatementList> "}" [ "Nahole" "{" <StatementList> "}" ]
<LoopStatement> ::= "GhuroChol" "(" <Number> ")" "{" <StatementList> "}"
<FuncDef> ::= "KajGothon" <Identifier> "(" <ParamList> ")" "{" <StatementList> "}"

<Assignment> ::= <Identifier> "=" <Expression> ";"

<ParamList> ::= empty | <Identifier> | <Identifier> "," <ParamList>
<ArgList> ::= empty | <Expression> | <Expression> "," <ArgList>

<Expression> ::= <Term> | <Expression> <Op> <Term>
<Term> ::= <Identifier> | <StringLiteral> | <Number> | <FuncCallExpr> | <Encrypt> | <Decrypt>
<Op> ::= "+" | "-" | "*" | "/" | "==" | "!=" | "<" | ">"

<FuncCall> ::= <Identifier> "(" <ArgList> ")" ";"
<FuncCallExpr> ::= <Identifier> "(" <ArgList> ")"

<Encrypt> ::= "GoponKoro" "(" <Expression> ")"
<Decrypt> ::= "UghatKoro" "(" <Expression> ")"

<Identifier> ::= [a-zA-Z_][a-zA-Z0-9_]*
<IPLiteral> ::= [0-9]+ "." [0-9]+ "." [0-9]+ "." [0-9]+
<Number> ::= [0-9]+
<StringLiteral> ::= '"' [^"]* '"'
